<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.temas.temasintermedioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temas"
            android:textSize="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_leccion"
                android:textSize="30dp"
                android:textStyle="bold"
                android:paddingTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagonal"
                android:textSize="30dp"
                android:textStyle="bold"
                android:paddingTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecciones"
                android:textSize="30dp"
                android:textStyle="bold"
                android:paddingTop="10dp"/>


        </LinearLayout>



        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_menu_camera"
            android:contentDescription="@string/descripcion"
            android:layout_marginTop="40dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_leccion"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:layout_marginBottom="40dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regresar"
            android:textSize="20dp"
            android:backgroundTint="@color/azul"
            android:layout_margin="20dp"
            />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:textSize="20dp"
            android:backgroundTint="@color/azul"
            android:layout_margin="20dp"
            />
    </LinearLayout>




    </LinearLayout>




</ScrollView>