<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainPractica.mainPracticaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practicas"
            android:gravity="center"
            android:textSize="50dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_temas"
            android:textSize="50dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/iniciar"
                android:textSize="20dp"
                android:layout_margin="20dp"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:textSize="20dp"
                android:layout_margin="20dp"/>

        </LinearLayout>




    </LinearLayout>





</ScrollView>