<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.practicas.pregunta1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leccion"
            android:gravity="center"
            android:textSize="50dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta"
            android:textSize="50dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/ic_menu_camera"
                    android:contentDescription="@string/descripcion"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/ic_menu_camera"
                    android:contentDescription="@string/descripcion"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">



            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_menu_camera"
                android:contentDescription="@string/descripcion"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_menu_camera"
                android:contentDescription="@string/descripcion"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuesta"
            android:gravity="center"
            android:textSize="50dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:textSize="20dp"
                android:backgroundTint="@color/azul"
                android:layout_margin="20dp"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:textSize="20dp"
                android:backgroundTint="@color/azul"
                android:layout_margin="20dp"
                />
        </LinearLayout>









    </LinearLayout>

</ScrollView>