<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainPractica.Practicas">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/practicas"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_temas"
                android:textSize="50dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/PRACbtnRegresar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/regresar"
                    android:textSize="20dp"
                    android:backgroundTint="@color/azul"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/PRACbtnIniciar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar"
                    android:textSize="20dp"
                    android:backgroundTint="@color/azul"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>