<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Lista_temas.Lecciones">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/LECIONEStvTituloTema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leccion"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/LECIONESivImagen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_menu_camera"
                android:contentDescription="@string/descripcion"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/LECIONEStvtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/LECIONEStvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:gravity="center"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:padding="10dp"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/LECCIONESbtnAnterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/azul"
                android:drawableLeft="@drawable/ic_flechaizqazul"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/LECCIONESbtnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:drawableRight="@drawable/ic_felchaderblanca"
                android:backgroundTint="@color/azul"/>


        </LinearLayout>

        


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>