<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.leccion.LeccionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leccion"
            android:gravity="center"
            android:textSize="50dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_menu_camera"
            android:contentDescription="@string/descripcion"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:gravity="center"
            android:textSize="50dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:padding="10dp"
            />
    </LinearLayout>
</ScrollView>