<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diccionario.Diccionario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diccionario"
                android:textSize="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DICetBusqueda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/busqueda"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/DICbtnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscar"
                android:textSize="20dp"
                android:backgroundTint="@color/azul"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <ListView
                android:id="@+id/DIClvResultados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                />


            <Button
                android:id="@+id/DICbtnRegresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:textSize="20dp"
                android:backgroundTint="@color/azul"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>




        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>