<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo_app"
                android:contentDescription="@string/descripcion"/>

            <EditText
                android:id="@+id/LOGetcorreo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:hint="@string/correo"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/LOGetpass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:hint="@string/pass"/>

<!--
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:textColorHint="@color/black"
                app:counterOverflowTextColor="@color/black"
                android:outlineSpotShadowColor="@color/black"
                android:outlineAmbientShadowColor="@color/black"
                >





                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/LOGetcorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:hint="@string/correo"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/LOGetpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:hint="@string/pass"/>
            </com.google.android.material.textfield.TextInputLayout>

-->
            <Button
                android:id="@+id/LOGbtnIniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:backgroundTint="@color/azul"/>

            <TextView
                android:id="@+id/LOGtvcrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crear"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/azul"/>
            <!--
            <TextView
                android:id="@+id/LOGtvrecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recuperar"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/azul"/>
            -->








        </LinearLayout>




    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>