<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida"
                android:textSize="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingTop="10dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/MAINivLecciones"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/saludo50"
                        android:contentDescription="@string/descripcion"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lecciones"
                        android:textSize="20dp"
                        android:gravity="center"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/MAINivPracticas"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity=""
                        app:srcCompat="@drawable/facil50"
                        android:contentDescription="@string/descripcion"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/practicas"
                        android:textSize="20dp"
                        android:gravity="center"/>

                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center">

                <ImageView
                    android:id="@+id/MAINivDiccionario"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/apreton50"
                    android:contentDescription="@string/descripcion"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diccionario"
                    android:textSize="20dp"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>